--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Platrlat",
   "short_name": "Platrlat",
   "description": "Platrlat — Fast, secure, and simple finance access.",
-  "start_url": "/index.html",
+  "start_url": "/app/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0069ff",
